--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Barber Shop BM | Tienda Online</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,26 +24,27 @@
     <header class="fondodebarradenav">
         <section>
             <div class="contenedorLogo">
-                
+
                 <div class="logo">
                     <a href="./index.html">
                         <img src="./assets/logo2.0.png" alt="Logo Barber Shop">
                     </a>
                 </div>
             </div>
-            <div class="dropdown"> 
+            <div class="dropdown">
                 <button>
-                    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAZklEQVRIS+2WsQ0AIAzDymecxml8BhMLVbcIM4QDYmFSlRbQaRA3DH5m3qqP6iF2nvIq1UsMTpzvwOIL5zi3+jjpYtfzzvuuXNg4YarFT+xxivIHgpULA2Nr0a2WG/BalCutAjHVG3dPCh94LfIXAAAAAElFTkSuQmCC"/>
+                    <img
+                        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAZklEQVRIS+2WsQ0AIAzDymecxml8BhMLVbcIM4QDYmFSlRbQaRA3DH5m3qqP6iF2nvIq1UsMTpzvwOIL5zi3+jjpYtfzzvuuXNg4YarFT+xxivIHgpULA2Nr0a2WG/BalCutAjHVG3dPCh94LfIXAAAAAElFTkSuQmCC" />
                 </button>
-            <div class="dropdown-content"> 
-                <a href="./index.html">Inicio</a> 
-                <a href="./pages/maquinas.html">Maquinas</a> 
-                <a href="./pages/tijerasynavajas.html">Tijeras y Navajas</a> 
-                <a href="./pages/accesorios.html">Accesorios</a>
-                <a href="./pages/contacto.html">Contacto</a>
+                <div class="dropdown-content">
+                    <a href="./index.html">Inicio</a>
+                    <a href="./pages/maquinas.html">Maquinas</a>
+                    <a href="./pages/tijerasynavajas.html">Tijeras y Navajas</a>
+                    <a href="./pages/accesorios.html">Accesorios</a>
+                    <a href="./pages/contacto.html">Contacto</a>
+                </div>
             </div>
-            </div>
-            <nav class="barnav">    
+            <nav class="barnav">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./pages/maquinas.html">Máquinas</a></li>
@@ -147,13 +151,10 @@
         </div>
     </footer>
     <!-- Cierre del footer -->
-
-
-
-
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
