--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     <div class="h1">
         <h1>Barber Shop Tienda de Productos Online</h1>
     </div>
-    <header class="fondodebarradenav">
-        <nav class="navbar navbar-expand-lg bg-light fondodebarradenav">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light fondodebarradenav barnav">
             <div class="container-fluid">
                 <div class=" navbar-brand logo">
                     <a href="./index.html">
                         <img src="./assets/logo2.0.png" alt="Logo Barber Shop">
                     </a>
                 </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler btnestilo" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse barnav" id="navbarNav">
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+                            <a class="nav-link " aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/maquinas.html">Máquinas</a>
@@ -56,43 +56,9 @@
                 </div>
             </div>
         </nav>
-        <!-- <section>
-            <div class="contenedorLogo">
-
-                <div class="logo">
-                    <a href="./index.html">
-                        <img src="./assets/logo2.0.png" alt="Logo Barber Shop">
-                    </a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <button>
-                    <img
-                        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAZklEQVRIS+2WsQ0AIAzDymecxml8BhMLVbcIM4QDYmFSlRbQaRA3DH5m3qqP6iF2nvIq1UsMTpzvwOIL5zi3+jjpYtfzzvuuXNg4YarFT+xxivIHgpULA2Nr0a2WG/BalCutAjHVG3dPCh94LfIXAAAAAElFTkSuQmCC" />
-                </button>
-                <div class="dropdown-content">
-                    <a href="./index.html">Inicio</a>
-                    <a href="./pages/maquinas.html">Maquinas</a>
-                    <a href="./pages/tijerasynavajas.html">Tijeras y Navajas</a>
-                    <a href="./pages/accesorios.html">Accesorios</a>
-                    <a href="./pages/contacto.html">Contacto</a>
-                </div>
-            </div>
-            <nav class="barnav">
-                <ul>
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="./pages/maquinas.html">Máquinas</a></li>
-                    <li><a href="./pages/tijerasynavajas.html">Tijeras & Navajas</a></li>
-                    <li><a href="./pages/accesorios.html">Accesorios</a></li>
-                    <li><a href="./pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-            </div>
-            <br>
-        </section> -->
     </header>
-
     <!-- CIERRE DE HEADER LOGO + NAV -->
+
     <!-- INICIO MAIN -->
     <main>
         <!-- FOTOS CARRUSEL -->
