--- a/pages/tijerasynavajas.html
+++ b/pages/tijerasynavajas.html
@@ -18,37 +18,39 @@
 <body>
     <!-- INICIO DE HEADER -->
     <header>
-        <section class="fondodebarradenav">
-            <div class="contenedorLogo">
-                <div class="logo">
+        <nav class="navbar navbar-expand-lg bg-light fondodebarradenav">
+            <div class="container-fluid">
+                <div class=" navbar-brand logo">
                     <a href="../index.html">
                         <img src="../assets/logo2.0.png" alt="Logo Barber Shop">
                     </a>
                 </div>
-            </div>
-            <div class="dropdown">
-                <button>
-                    <img
-                        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAZklEQVRIS+2WsQ0AIAzDymecxml8BhMLVbcIM4QDYmFSlRbQaRA3DH5m3qqP6iF2nvIq1UsMTpzvwOIL5zi3+jjpYtfzzvuuXNg4YarFT+xxivIHgpULA2Nr0a2WG/BalCutAjHVG3dPCh94LfIXAAAAAElFTkSuQmCC" />
+                <button class="navbar-toggler btnestilo" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="dropdown-content">
-                    <a href="../index.html">Inicio</a>
-                    <a href="./maquinas.html">Maquinas</a>
-                    <a href="./tijerasynavajas.html">Tijeras y Navajas</a>
-                    <a href="./accesorios.html">Accesorios</a>
-                    <a href="./contacto.html">Contacto</a>
+                <div class="collapse navbar-collapse barnav" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/maquinas.html">Máquinas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/tijerasynavajas.html">Tijeras & Navajas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/accesorios.html">Accesorios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                        </li>
+
+                    </ul>
                 </div>
             </div>
-                <nav class="barnav">
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="../pages/maquinas.html">Máquinas</a></li>
-                        <li><a href="../pages/tijerasynavajas.html">Tijeras & Navajas</a></li>
-                        <li><a href="../pages/accesorios.html">Accesorios</a></li>
-                        <li><a href="../pages/contacto.html">Contacto</a></li>
-                    </ul>
-                </nav><br>
-        </section>
+        </nav>
     </header>
 
     <main>
