edicion de carrusel

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div id="carrusell" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="./assets/carruselfoto1.jpg" class="d-block w-100" alt="foto maquinas cortadoras de pelo">
+                    <img src="./assets/carruselfoto1.jpg" class="d-block carrusel-foto" alt="foto maquinas cortadoras de pelo">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/carrusel02.jpg" class="d-block w-100" alt="foto sillon de barberia">
+                    <img src="./assets/carrusel02.jpg" class="d-block carrusel-foto" alt="foto sillon de barberia">
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./assets/carrusel03.jpg" class="d-block w-100" alt="foto de salon de peluqueria">
+                <div class="carousel-item " data-bs-interval="2000">
+                    <img src="./assets/carrusel03.jpg" class="d-block carrusel-foto" alt="foto de salon de peluqueria">
                 </div>
             </div>
         </div>
