--- a/index.html
+++ b/index.html
@@ -110,13 +110,19 @@
     </main>
     <!-- CIERRE DE MAIN -->
     <!-- Comienzo del footer -->
-    <footer class="footer">
+    <footer class="container-fluid footer">
+        
+        <div class="container divfooter">
 
-        <div class="divfooter">
+            <div class="row footercategorias">
 
-            <div class="footercategorias">
+                <div>
+                    <img src="./assets/logo2.0.png" class="" alt="foto del logo">
+                </div>
 
-                <h3 class="h3footer">CATEGORIAS</h3>
+                <div>
+                    <h3 class="h3footer">CATEGORIAS</h3>
+                </div>
 
                 <ul>
                     <li><a href="./pages/maquinas.html">Máquinas</a></li>
@@ -125,13 +131,9 @@
                     <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
 
-            </div>
-
-
-            <div class="footerredes">
-
-                <h3 class="h3footer">REDES</h3>
-
+                <div>
+                    <h3 class="h3footer">REDES</h3>
+                </div>
 
                 <a href="https://www.instagram.com/" target="_blank">
                     <img src="./assets/instagram-logo-24.png" alt="logo de instagram">
@@ -143,14 +145,9 @@
                     <img src="./assets/twitter-logo-24.png" alt="logo de twitter">
                 </a>
 
-
-            </div>
-
-            <div class="footerpago">
-
-                <h3 class="h3footer">METODOS DE PAGO</h3>
-
-
+                <div>
+                    <h3 class="h3footer">METODOS DE PAGO</h3>
+                </div>
                 <img src="./assets/logopago.jpg" alt="foto de tarjetas">
 
             </div>
