--- a/pages/tijerasynavajas.html
+++ b/pages/tijerasynavajas.html
@@ -18,7 +18,7 @@
 <body>
     <!-- INICIO DE HEADER -->
     <header>
-        <nav class="navbar navbar-expand-lg bg-light fondodebarradenav">
+        <nav class="navbar navbar-expand-lg bg-light fondodebarradenav barnav">
             <div class="container-fluid">
                 <div class=" navbar-brand logo">
                     <a href="../index.html">
