responsive tarjetas tijynav

--- a/pages/tijerasynavajas.html
+++ b/pages/tijerasynavajas.html
@@ -65,100 +65,107 @@
                 <li><a href="#navajas">Navajas</a></li>
             </ul>
         </div>
-        <section>
-            <h3 class="productos" id="tijeras">Tijeras</h3>
+    <section class="container-fluid">
 
-            <div class="divtarjproductos">
+        <div class="container col-7">
+
+            <div class="row justify-content-center g-5  h-100 d-flex justify-content-evenly align-items-start">
+                
+                        <h3 class="productos m-5" id="tijeras">Tijeras</h3>
 
 
-                <div class="tarjproductos">
-                    <img src="../assets/tijera01.jpg" class="tarjproductosimg" alt="foto tijera">
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/tijera01.jpg" class="card-img-top mt-3" alt="foto tijera">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">KIT TIJERAS DE CORTE + PULIR</h3>
+                            <p class="fw-bolder">$8990</p>
+                            <h4>Kit de tijera de corte y tijera de pulir. Incluye peine. Disponible en 2 colores: Azul y Negro
+                            </h4>
+                        </div>
+                    </div>
 
-                    <h3>KIT TIJERAS DE CORTE + PULIR</h3>
-                    <p>$8990</p>
-                    <h4>Kit de tijera de corte y tijera de pulir. Incluye peine. Disponible en 2 colores: Azul y Negro
-                    </h4>
-                </div>
+                    <div class="card tarjproductos" style="width: 18rem">
+                        <img src="../assets/tijera02.jpg" class="card-img-top mt-3" alt="foto tijera">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">TIJERA CORTE BLACK VB16</h3>
+                            <p class="fw-bolder">$5090</p>
+                            <h4>Tijera de acero inoxidable marca stylecut de corte negra 6"</h4>
+                        </div>
+                    </div>
 
-                <div class="tarjproductos">
-                    <img src="../assets/tijera02.jpg" class="tarjproductosimg" alt="foto tijera">
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/tijera03.jpg" class="card-img-top mt-3" alt="foto tijera">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">TIJERA DE PULIR PROFESIONAL</h3>
+                            <p class="fw-bolder">$14200</p>
+                            <h4>Acero inoxidable en tonos dorado y negro para darle ese toque elegante</h4>
+                        </div>
+                    </div>
 
-                    <h3>TIJERA CORTE BLACK VB16</h3>
-                    <p>$5090</p>
-                    <h4>Tijera de acero inoxidable marca stylecut de corte negra 6"</h4>
-                </div>
 
-                <div class="tarjproductos">
-                    <img src="../assets/tijera03.jpg" class="tarjproductosimg" alt="foto tijera">
+                        <h3 class="productos m-5" id="navajas">Navajas</h3>
 
-                    <h3>TIJERA DE PULIR PROFESIONAL 5.5" GOLDEN COBALT</h3>
-                    <p>$14200</p>
-                    <h4>Acero inoxidable en tonos dorado y negro para darle ese toque elegante,logran un acabado
-                        perfecto
-                        Incluye llave de ajuste</h4>
-                </div>
+
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/navaja01.jpg" class="card-img-top mt-3" alt="navajin">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">NAVAJIN PORTA GILLETTE MAGIC</h3>
+                            <p class="fw-bolder">$610</p>
+                            <h4>Navajin ProBasic INOX Porta Gillette Negro</h4>
+                        </div>
+                    </div>
+
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/navaja02.jpg" class="card-img-top mt-3" alt="navaja con mango">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">NAVAJA CON MANGO DE MADERA </h3>
+                            <p class="fw-bolder">$9990</p>
+                            <h4>De acero y carbono y una óptima
+                                preservación
+                                del filo mucho más resistente</h4>
+                        </div>
+                    </div>
+
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/navaja03.jpg" class="card-img-top mt-3" alt="Navajin">
+                        <div class="text-center m-3"> 
+                            <h3 class="fs-6">NAVAJIN BARBERIA</h3>
+                            <p class="fw-bolder">$5990</p>
+                            <h4>Navajín para uso profesional perfectamente equilibrada y muy cómoda de manejar</h4>
+                        </div>
+                    </div>
+
+
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/navaja04.jpg" class="card-img-top mt-3" alt="Navajin">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">NAVAJIN T/FEATHER I-85</h3>
+                            <p class="fw-bolder">$450</p>
+                            <h4>Navajín para afeitar I-85 Lucydan</h4>
+                        </div>
+                    </div>
+
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/navaja05.jpg" class="card-img-top mt-3" alt="Navajin gillete">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">NAVAJIN EURO-STIL </h3>
+                            <p class="fw-bolder">$299</p>
+                            <h4>Marca:EuroStil, Navajín / gillete 1 hoja euro-stil</h4>
+                        </div>
+                    </div>
+
+                    <div class="card tarjproductos " style="width: 18rem">
+                        <img src="../assets/navaja06.jpg" class="card-img-top mt-3" alt="repuesto de navajas">
+                        <div class="text-center m-3">
+                            <h3 class="fs-6">HOJA DE AFEITAR PLATINUM</h3>
+                            <p class="fw-bolder">$390</p>
+                            <h4>Caja de repuesto de 10 hojas para navajín</h4>
+                        </div>
+                    </div>
+
             </div>
-        </section>
-        <h3 class="productos" id="navajas">Navajas</h3>
-        <section>
-            <div class="divtarjproductos">
-
-                <div class="tarjproductos">
-                    <img src="../assets/navaja01.jpg" class="tarjproductosimg" alt="navajin">
-
-                    <h3>NAVAJIN PORTA GILLETTE MAGIC BC01</h3>
-                    <p>$610</p>
-                    <h4>Navajin ProBasic INOX Porta Gillette Negro</h4>
-                </div>
-
-                <div class="tarjproductos">
-                    <img src="../assets/navaja02.jpg" class="tarjproductosimg" alt="navaja con mango">
-
-                    <h3>NAVAJA CON MANGO DE MADERA YASAKA </h3>
-                    <p>$9990</p>
-                    <h4>Procesos de forjado, templado y pulido de aleaciones de acero y carbono y una óptima
-                        preservación
-                        del filo mucho más resistente y duradero</h4>
-                </div>
-
-                <div class="tarjproductos">
-                    <img src="../assets/navaja03.jpg" class="tarjproductosimg" alt="Navajin">
-
-                    <h3>NAVAJIN BARBERIA OFFICIAL BARBER </h3>
-                    <p>$5990</p>
-                    <h4>Navajín para uso profesional Ideal Para Barbería Un diseño funcional que no presenta objeciones.
-                        Perfectamente equilibrada y muy cómoda de manejar</h4>
-                </div>
-            </div>
-
-            <div class="divtarjproductos">
-
-                <div class="tarjproductos">
-                    <img src="../assets/navaja04.jpg" class="tarjproductosimg" alt="Navajin">
-
-                    <h3>NAVAJIN T/FEATHER I-85 LUCYDAN </h3>
-                    <p>$450</p>
-                    <h4>Navajín para afeitar I-85 Lucydan</h4>
-                </div>
-
-                <div class="tarjproductos">
-                    <img src="../assets/navaja05.jpg" class="tarjproductosimg" alt="Navajin gillete">
-
-                    <h3>NAVAJIN /GILLETE 1 HOJA EURO-STIL </h3>
-                    <p>$299</p>
-                    <h4>Marca:EuroStil, Navajín / gillete 1 hoja euro-stil</h4>
-                </div>
-
-                <div class="tarjproductos">
-                    <img src="../assets/navaja06.jpg" class="tarjproductosimg" alt="repuesto de navajas">
-
-                    <h3>HOJA DE AFEITAR X10 PLATINUM</h3>
-                    <p>$390</p>
-                    <h4>Caja de repuesto de 10 hojas para navajín</h4>
-                </div>
-            </div>
-        </section>
-
+        </div>
+    </section>
     </main>
 
     <footer class="container-fluid bg-color footer-h mt-5">
