--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <img src="./assets/logo2.0.png"  alt="foto del logo">
             </div>
             <div class="footer-contenido">
-                <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
+                <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
                     <h3 class="text-center fs-2 footer-texto shadow-lg">CATEGORIAS</h3>
 
                     <div class="p-3 d-flex flex-column">
@@ -137,7 +137,7 @@
                 </div>
 
 
-                <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
+                <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
                     <h3 class="text-center fs-2 footer-texto shadow-lg" >REDES</h3>
                     <div class="p-5 d-flex justify-content-around">
 
@@ -151,7 +151,7 @@
                     </div>
                 </div>
 
-                <div class="py-3 col-lg-3" data-aos="fade-up" data-aos-duration="2000">
+                <div class="py-3 col-lg-3" data-aos="flip-up" data-aos-duration="1000">
                     <h3 class="text-center fs-2 footer-texto shadow-lg" >METODOS DE PAGO</h3>
                     <div class="p-5 d-flex justify-content-center">
                         <img src="./assets/logopago.jpg" alt="foto de tarjetas" class="w-auto">
