--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
                         <img src="../assets/logo2.0.png" alt="Logo Barber Shop">
                     </a>
                 </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                <button class="navbar-toggler btnestilo" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
