se agrego etiqueta meta de SEO y mixins

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <meta name="description" content="¿Quieres convertirte en todo un experto profesional de la barberia? Este es tu sitio ideal , Al mejor Precio!!">
+    <meta name="description" content="¿Quieres convertirte en todo un experto profesional de la barberia?, Esta es tu tienda ideal  y  al mejor Precio!">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Barber Shop BM | Tienda Online</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
