--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../styles/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
+    <meta name="description" content="Los mejores accesorios para peluqueros y barberos del pais en nuestra tienda online">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Accesorios | Barber Shop BM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
