--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="No dudes en contactar con nosotros! , Tienda Online de Productos de peluqueria y Barberia">
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Contacto | Barber Shop BM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
