modificacion para Js

--- a/pages/maquinas.html
+++ b/pages/maquinas.html
@@ -79,7 +79,7 @@
                         <div class="text-center m-3">
                             <h3 class="fs-6">MAQUINA CORTADORA DE PELO SUPER TAPER </h3>
                             <p class="fw-bolder">$22990</p>
-                            <button tabindex="0" 
+                            <!-- <button tabindex="0" 
                                 class="btnDeTarjetas" 
                                 role="button" 
                                 data-bs-toggle="popover" 
@@ -93,6 +93,10 @@
                                 450 g, incluye: clipper, protector de cuchilla, 4 guias peine plásticos"
                                 data-bs-title="Descripción del Producto: ">
                                 Ver Más
+                            </button> -->
+                            <button
+                            class="btnDeTarjetas" id="btn">
+                            <a href="./carrito.html">Comprar</a>
                             </button>
 
 
