--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="./js/main.js"></script>
     <!-- CIERRE DE BOOTSTRAP -->
 </body>
 
